Creando funcionalidad de Jugar

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </nav>
     <main id="main">
         <section class="contenedor-botones">
-            <button class="botones btn-principal">
+            <button class="botones btn-principal btn-iniciar">
                 Iniciar juego
             </button>
-            <button class="botones btn-secundario">
+            <button class="botones btn-secundario btn-agregar">
                 Agregar nueva palabra
             </button>
         </section>
@@ -29,5 +29,6 @@
         </section>
     </footer>
     
+    <script src="./js/escuchadorBotones.js"></script>
 </body>
 </html>
